--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,8 +1,8 @@
-$main: #8E3B46;
-$support: #EB5160;
-$support2: #EF476F;
-$contrast: #F4DBD8;
-$contrast2: #393D3F;
+$main: #8e3b46;
+$support: #eb5160;
+$support2: #ef476f;
+$contrast: #f4dbd8;
+$contrast2: #393d3f;
 $highlight: rgb(12, 233, 12);
 $highlight2: #000;
 
